# hr_data_insights

./: .gitignore  Cleaned_HR_Data.csv  README.md  export_data.sql  hr_cleaning.ipynb  hr_dashboard.pbix  hr_data_cleanup.sql  pyproject.toml
docs/: metrics_catalog.md
docs/visualizations/mplconfig/: fontlist-v330.json
scripts/: create_visuals.py  run_pipeline.py
sql/: 01_clean_hr_dataset.sql  02_hr_analytics_views.sql
src/hr_data_insights/: __init__.py  analytics.py  cleaning.py  config.py  io.py  pipeline.py  validation.py
tests/: test_cleaning.py
