[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-data-insights"
version = "0.1.0"
description = "Production-ready HR data cleaning and analytics toolkit."
authors = [{ name = "Sebastian Gonzalez" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
